[gd_scene load_steps=6 format=3 uid="uid://bpq7apxll8c5p"]

[ext_resource type="Texture2D" uid="uid://hkrj575y2sdc" path="res://Assets/Enemies/EnemyAll.png" id="1_02qpk"]
[ext_resource type="Script" path="res://Scripts/Enemies/enemy.gd" id="1_6bqc1"]
[ext_resource type="PackedScene" uid="uid://mc676o36muco" path="res://Scenes/Enemies/defence_shot.tscn" id="2_ds05m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qdivo"]
size = Vector2(14, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cf7w1"]
size = Vector2(14, 3)

[node name="EnemyDefence" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_6bqc1")
SHOT_SCENE = ExtResource("2_ds05m")
damage = 1
health = 4

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_02qpk")
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_qdivo")

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="FeetHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FeetHitbox"]
position = Vector2(0, 10.5)
shape = SubResource("RectangleShape2D_cf7w1")

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="end_invulnerable"]
